# sillybot

./: .gitignore  .replit  LICENSE  README.md  README.txt  TODO  changelog.txt  keep_alive.py  libsodium.so.23.3.0  main.py  notes.txt  package-lock.json  pyproject.toml  requirements.txt  rhcooc.py  sdfsdf  sdfsdsdf  todo
a/: checks.py  commands.py  configs.py  constants.py  funcs.py  stuff.py
cogs/: admin.py  cats.py  cogmanager.py  customization.py  errors.py  events.py  fun.py  help.py  moderation.py  reactions.py  reminders.py  soundboard.py  starboard.py  tags.py  tagsold.py  temp  utilities.py  voice.py
data/: blacklist.pkl  commands.py  constants.py  messages.py  prefixes.pkl  tags.pkl
data/pickles/: blacklist.pkl  rhcooc.pkl  tags.pkl  tags.pkl.bak
flaskapp/static/: settings.txt  style.css
flaskapp/templates/: base.html  helplist.html  names.html  rhcooc.html  tags.html
images/floppas/: videos
templates/: commands.html  tags.html  tagsearch.html
utils/: checks.py  funcs.py
