[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["elisttm <creeperstorm75@gmail.com>"]
description = ""
name = "trashbot"
version = "0.1.0"
[tool.poetry.dependencies]
flask = "^1.1"
python = "^3.7"
discord = "^1.0"
pytz = "^2019.3"
[tool.poetry.dev-dependencies]
