[build-system]
build-backend = "poetry.masonry.api"
requires = ["poetry>=0.12"]

[tool]
[tool.poetry]
authors = ["elisttm"]
description = ""
name = "trashbot"
version = "0.1.0"
[tool.poetry.dependencies]
discord = "^1.0"
flask = "^1.1"
python = "^3.8"
pytz = "^2019.3"
psutil = "^5.7.0"
PyNaCl = "^1.4.0"
tinydb = "^4.1.1"
[tool.poetry.dev-dependencies]
